// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`autobarrel cli should run the CLI 1`] = `
Array [
  "testing",
  "testing/autobarrel.json",
  "testing/README.md",
  "testing/testDir",
  "testing/testDir/excludedDir",
  "testing/testDir/excludedDir/excluded.ts",
  "testing/testDir/excludedDir/index.ts",
  "testing/testDir/excludedFile",
  "testing/testDir/excludedFile/excludedFile.ts",
  "testing/testDir/excludedFile/includedFile.ts",
  "testing/testDir/excludedFile/index.ts",
  "testing/testDir/excludedPattern",
  "testing/testDir/excludedPattern/abc.bin.ts",
  "testing/testDir/excludedPattern/def.bin.ts",
  "testing/testDir/excludedPattern/index.ts",
  "testing/testDir/excludedPattern/some.gen.ts",
  "testing/testDir/excludeDts",
  "testing/testDir/excludeDts/index.ts",
  "testing/testDir/excludeDts/nonDts.ts",
  "testing/testDir/excludeDts/something.d.ts",
  "testing/testDir/ignoredDir",
  "testing/testDir/ignoredDir/ignoredDir.ts",
  "testing/testDir/index.ts",
  "testing/testDir/jsTs",
  "testing/testDir/jsTs/file.js",
  "testing/testDir/jsTs/index.ts",
  "testing/testDir/jsTs/tsFile.ts",
  "testing/testDir/noTsFiles",
  "testing/testDir/noTsFiles/README.md",
  "testing/testDir/some",
  "testing/testDir/some/deep",
  "testing/testDir/some/deep/index.ts",
  "testing/testDir/some/deep/path",
  "testing/testDir/some/deep/path/file.ts",
  "testing/testDir/some/deep/path/index.ts",
  "testing/testDir/some/index.ts",
  "testing/testDir/someDir",
  "testing/testDir/someDir/app.ts",
  "testing/testDir/someDir/index.ts",
  "testing/testDir/watchTest",
  "testing/testDir/watchTest/index.ts",
  "testing/testDir/watchTest/watch.ts",
]
`;

exports[`watch mode dir remove should run --watch mode, watch dir remove: After dir remove 1`] = `
"// created by autobarrel, do not modify directly

export * from './watch'
"
`;

exports[`watch mode dir remove should run --watch mode, watch dir remove: Before dir remove 1`] = `
"// created by autobarrel, do not modify directly

export * from './addedDir/'
export * from './watch'
"
`;

exports[`watch mode should run --watch mode, watch file add: After file add 1`] = `
"// created by autobarrel, do not modify directly

export * from './added'
export * from './watch'
"
`;

exports[`watch mode should run --watch mode, watch file add: Before file add 1`] = `
"// created by autobarrel, do not modify directly

export * from './watch'
"
`;

exports[`watch mode should run --watch mode, watch file remove: Before file remove 1`] = `
"// created by autobarrel, do not modify directly

export * from './watch'
"
`;
